fix(responsiveness): ensure text wrapping on mobile for name and location

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -12,6 +12,11 @@
     top: var(--static-space-64);
 }
 
+.responsiveNowrap {
+    white-space: normal;
+    word-break: break-word;
+}
+
 @media (--s) {
     .avatar {
         top: auto;
@@ -23,5 +28,9 @@
 
     .blockAlign {
         align-self: center;
+    }
+
+    .responsiveNowrap {
+        white-space: nowrap;
     }
 }
